--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,17 @@
+@import "./montserrat";
+
+body {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+code {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+input {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
 .d-flex {
   display: flex;
 }
