--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -57,6 +57,10 @@ input {
     display: none;
   }
 
+  .informations-container {
+    padding: 0px 0.5%;
+  }
+
   .display-desktop {
     display: none;
   }
